# CrossPilot

./: 1_🔧_Workflow_Builder.py  2_👋_Onboarding.py  3_🚨_Incident_Triage.py  4_📊_Reporting.py  README.md  ai_services.py  app.py  config.toml  data_manager.py  incidents.csv  metrics.csv  pyproject.toml  roles.csv  users.csv  workflow_engine.py  workflows.json
