[project]
name = "crosspilot"
version = "0.1.0"
description = "AI-Augmented Modular Workflow Copilot"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "openai>=1.3.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"